V4.0.2 (in progress)
[REFACTOR] : Add draft thumbnail on page status icons
[REFACTOR] : Update phpMyAdmin to version 3.3.1
[REFACTOR] : Update ExtJS to version 3.2.0
[REFACTOR] : Add pages redirection infos in pages tree

V4.0.1 (19/03/10)
[BUG] : Corrected bugs : 399, 401, 286, 265, 268, 283, 284, 302, 282, 280, 296, 304 (see http://www.automne.ws/bug/)
[BUG] : In the cms_forms module with IE (form duplication)
[BUG] : Multiples validations launches multiple concurrent ajax requests
[REFACTOR] : update Automne copyright dates
[REFACTOR] : add a background image on lorem ipsum text to help non latin natives to identify it
[REFACTOR] : do some optimisation on administration images
[REFACTOR] : rows and templates descriptions
[REFACTOR] : Enhance 403 and 404 files and favicon
[REFACTOR] : Change some admin messages
[REFACTOR] : Add polymod items ids, templates ids and rows ids on administration results. On mouse over of results titles.
[REFACTOR] : Automne update panel is now done with ExtJS
[FEATURE] : update Zend Framework to version 1.10.2
[FEATURE] : in polymod, templates and rows administration, items can now be searched by ids
[FEATURE] : Add alternative domains management for websites
[FEATURE] : Add a panel into Server parameters to consult errors logs
[FEATURE] : Add an action into Server parameters to force browsers cache update

V4.0.0 (18/01/10)
[BUG] : Lots of minor bugs corrected
[BUG] : tags atm-loop can now be nested
[BUG] : add missing ExtJS locales
[BUG] : correct problems on sessions persistence
[BUG] : handle iframe crash (wrong domain)
[BUG] : block varchar with single quotes can be edited
[BUG] : infinite loop when editing some pages
[REFACTOR] : Completely refactor I18nm messages system. The message table is now more extensible
[REFACTOR] : Update polymod documentation
[REFACTOR] : Review english messages
[REFACTOR] : Improve security against file upload threat
[REFACTOR] : Update FCKEditor to version 2.6.5 to correct some IE8 bugs