@@ -15,3 +15,4 @@
 .DS_Store
 ._*
 /utils
+Thumbs.db
