@@ -319,6 +319,7 @@ $jscontent = <<<END
 		region:				'center',
 		border:				false,
 		enableTabScroll:	true,
+		plugins:			[ new Ext.ux.TabScrollerMenu() ],
 		listeners: {'beforetabchange' : function(tabPanel, newTab, currentTab ) {
 			if (newTab.id == 'groupUsers-{$groupId}') {
 				//(re)load of groups store
