@@ -124,6 +124,7 @@ $jscontent = <<<END
 		region:				'center',
 		plain:				true,
 		enableTabScroll:	true,
+		plugins:			[ new Ext.ux.TabScrollerMenu() ],
 		defaults:			{
 			autoScroll: true
 		},
