@@ -463,6 +463,7 @@ $jscontent .= <<<END
 		region:				'center',
 		plain:				true,
         enableTabScroll:	true,
+		plugins:			[ new Ext.ux.TabScrollerMenu() ],
 		defaults:			{
 			autoScroll: true
 		},
