@@ -1,8 +1,11 @@
 V4.0.2 (in progress)
+[BUG] : Remove ghost groups on templates
+[BUG] : Templates do a better check on usage
 [REFACTOR] : Add draft thumbnail on page status icons
 [REFACTOR] : Update phpMyAdmin to version 3.3.1
 [REFACTOR] : Update ExtJS to version 3.2.0
 [REFACTOR] : Add pages redirection infos in pages tree
+[FEATURE] : Add tabs menu on all tabs panels
 
 V4.0.1 (19/03/10)
 [BUG] : Corrected bugs : 399, 401, 286, 265, 268, 283, 284, 302, 282, 280, 296, 304 (see http://www.automne.ws/bug/)
